<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">FOUR IN A ROW</string>
    <string name="text_main_title">FOUR IN A ROW</string>
    <string name="button_single">Single Player</string>
    <string name="button_two">Two Players</string>
    <string name="button_setting">Settings</string>
    <string name="button_Exit">Exit</string>
    <string name="resetData">Reset</string>
    <string name="text_NAME_title">Players Names</string>
    <string name="button_statistics">Game Statistics</string>
    <string name="textView_Game_Statistics">Game Statistics</string>
    <string name="textView_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="textView_game">FOUR IN A ROW</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_game_history">Game Statistics</string>
    <string name="button_Vibration">Vibration On</string>
    <string name="button_sound">Sound On</string>
    <string name="button_backHistory">Back</string>
    <string name="title_activity_history_row">HistoryRow</string>
    <string name="title_activity_names">Players Names</string>
    <string name="title_activity_game_options">Game_options</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="button_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="textView_About">About</string>
    <string name="button_about_back">Back</string>
    <string name="button_backSittings">Back</string>
    <string name="editTextAbout">Four in a row is a two-player game which the players take turns  dropping colored discs from the top into a seven-column, six-row vertically grid.  The objective of the game is to connect four of ones own discs of the same color next to each other vertically, horizontally, or diagonally  before your opponent."</string>
</resources>
