<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#404040"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:id="@+id/text_main_title"
        android:text="@string/text_main_title"
        android:textColor="#66a3ff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_single"
        android:text="@string/button_single"
        android:layout_below="@+id/text_main_title"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:textColor="@drawable/buttontext"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/button_setting"
        android:layout_alignStart="@+id/button_setting"
        android:layout_alignRight="@+id/button_setting"
        android:layout_alignEnd="@+id/button_setting" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_two"
        android:text="@string/button_two"
        android:background="@drawable/buttonshape"
        android:textSize="20sp"
        android:textColor="@drawable/buttontext"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/button_single"
        android:layout_alignLeft="@+id/button_setting"
        android:layout_alignStart="@+id/button_setting"
        android:layout_alignRight="@+id/button_single"
        android:layout_alignEnd="@+id/button_single" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_setting"
        android:text="@string/button_setting"
        android:background="@drawable/buttonshape"
        android:textSize="20sp"
        android:textColor="@drawable/buttontext"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/button_two"
        android:layout_alignLeft="@+id/button_statistics"
        android:layout_alignStart="@+id/button_statistics"
        android:layout_alignRight="@+id/button_statistics"
        android:layout_alignEnd="@+id/button_statistics" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_Exit"
        android:text="@string/button_Exit"
        android:textSize="20sp"
        android:textColor="@drawable/buttontext"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/button_about"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@drawable/buttontext"
        android:id="@+id/button_statistics"
        android:text="@string/button_statistics"
        android:layout_below="@+id/button_setting"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:id="@+id/button_about"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:textColor="@drawable/buttontext"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/button_statistics"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
