<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#404040"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.game_4_in_a_row.Settings">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:id="@+id/textView_settings"
        android:text="@string/textView_settings"
        android:textColor="#66a3ff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Vibration"
        android:textSize="20sp"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:id="@+id/button_Vibration"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/button_sound"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/button_sound"
        android:id="@+id/button_sound"
        android:textSize="20sp"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView_settings"
        android:layout_alignLeft="@+id/button_Vibration"
        android:layout_alignStart="@+id/button_Vibration"
        android:layout_alignRight="@+id/button_Vibration"
        android:layout_alignEnd="@+id/button_Vibration" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:text="@string/button_backSittings"
        android:id="@+id/button_backSittings"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView_settings"
        android:layout_alignEnd="@+id/textView_settings"
        android:layout_alignLeft="@+id/textView_settings"
        android:layout_alignStart="@+id/textView_settings" />


</RelativeLayout>
