<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#404040"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.game_4_in_a_row.About">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_About"
        android:id="@+id/textView_About"
        android:textColor="#66a3ff"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:text="@string/button_about_back"
        android:id="@+id/button_about_back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAbout"
        android:textSize="18sp"
        android:text="@string/editTextAbout"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textView_About"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_above="@+id/button_about_back"
        android:src="@drawable/about_pic"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/editTextAbout"
        android:layout_alignRight="@+id/editTextAbout"
        android:layout_alignEnd="@+id/editTextAbout" />

</RelativeLayout>
