<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#404040"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.game_4_in_a_row.Game_history">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:id="@+id/textView_Game_Statistics"
        android:text="@string/textView_Game_Statistics"
        android:textColor="#66a3ff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/history_table"
        android:layout_below="@+id/textView_Game_Statistics"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        >

        <TableRow
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="#ffee00">

            <TextView
                android:textAlignment="center"
                android:text="Name"
                />
            <TextView
                android:textAlignment="center"
                android:text="Wins"
                android:gravity="right"
                android:padding="10dp"
                />
            <TextView
                android:textAlignment="center"
                android:text="Losses"
                android:gravity="right"
                />
            <TextView
                android:textAlignment="center"
                android:text="Draws"
                android:gravity="right"
                android:padding="10dp"
                />
            <TextView
                android:textAlignment="center"
                android:text="win%"
                android:paddingRight="1dp"
                android:gravity="right" />
        </TableRow>

        <View
            android:layout_height="3dip"
            android:layout_width="fill_parent"
            android:background="#07070d"/>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetData"
        android:text="@string/resetData"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView_Game_Statistics"
        android:layout_alignEnd="@+id/textView_Game_Statistics" />

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/button_backHistory"
        android:id="@+id/button_backHistory"
        android:background="@drawable/buttonshape2"
        android:textColor="@drawable/buttontext"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView_Game_Statistics"
        android:layout_alignStart="@+id/textView_Game_Statistics" />


</RelativeLayout>
